# skill-chatbot

./: .env.example  .gitattributes  .gitignore  HANDOFF.md  Makefile  README.md  SKILL.md  brief.md
admin-bot/: .env.example  SKILL.md
docs/: architecture.md  cutover.md  message-flows.md  ops.md  runbook.md  security.md  smoke-test.md
orchestrator/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
orchestrator/booking_cli/: README.md  booking_flow.py
orchestrator/data/: booking_rules.yaml  faq.md
orchestrator/scripts/: ingest_file.py  ingest_rules.py  smoke.py
orchestrator/src/: booking_subprocess.py  enums.py  http_server.py  i18n.py  image_handler.py  inference.py  main.py  notify.py  rag.py  router.py  settings.py  state.py  tail.py
orchestrator/src/admin/: __init__.py  handlers.py  yaml_patch.py
orchestrator/src/flows/: booking_edit.py  booking_new.py  handoff.py
orchestrator/tests/: conftest.py  test_flows_booking_edit.py  test_flows_booking_new.py  test_flows_handoff.py  test_http.py  test_i18n_keys.py  test_image.py  test_ingest.py  test_main.py  test_notify.py  test_rag.py  test_router.py  test_smoke.py  test_state.py  test_state_log.py  test_tail.py
orchestrator/tests/admin/: conftest.py  test_acl.py  test_auth.py  test_routes.py  test_yaml_patch.py
orchestrator/tests/fixtures/: smoke_inbox.ndjson
scripts/: capture-baseline.sh  create-issues.sh  dev-loop.sh  install-systemd-system.sh  install-systemd.sh  qdrant-snapshot.sh  retire-old-skills.sh  snapshot-upstream.sh  wa-bridge-qr.sh
tests/: test_capture_baseline.sh  (+4 more)
(+44 files in other folders)
