[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator"
version = "0.1.0"
description = "skill-chatbot orchestrator: NDJSON tailer, LLM router, booking/handoff flows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "A-I-M-S" }]
dependencies = [
    "openai>=1.55.0",
    "fastembed>=0.3.1",
    "qdrant-client>=1.10.0",
    "python-dotenv>=1.0.1",
    "pypdf>=4.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dateutil>=2.9.0",
    "pygtail>=0.14.0",
    "python-json-logger>=2.0.7",
    "ruamel.yaml>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "types-python-dateutil>=2.9.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.coverage.run]
source = ["src"]
branch = true
